--- a/src/main/webapp/ecommerce/paginas/processos/itensVenda.xhtml
+++ b/src/main/webapp/ecommerce/paginas/processos/itensVenda.xhtml
@@ -146,7 +146,7 @@
 			<br></br>
 			<div class="row mb-2" >
 
-				<div class="col-3 offset-4" align="center">
+				<div class="col-3" style="margin-left:70%;" align="left">
 					<label>Total Venda</label>
 					<h:inputText
 						value="#{itemVendaController.vendaController.vendaDto.totalVenda}"
@@ -158,7 +158,7 @@
 			</div>
 
 			<div class="row mb-2 ml-5 pl-3">
-				<div class="col-6 offset-3" align="right">
+				<div class="col-6" style="margin-left:45%;" align="right">
 					<h:commandButton action="#{itemVendaController.cancelar}"
 						value="Cancelar" immediate="true" class="btn btn-primary"
 						style="width: 120px; margin: 5px"></h:commandButton>
@@ -169,7 +169,7 @@
 				</div>
 			</div>
 
-			<div class="modal" id="pesquisarModalProduto">
+			<div class="modal" id="pesquisarModalProduto  ">
 				<div class="modal-dialog">
 					<div class="modal-content">
 						<div class="modal-body">
