--- a/src/main/webapp/ecommerce/paginas/processos/fechamentoVenda.xhtml
+++ b/src/main/webapp/ecommerce/paginas/processos/fechamentoVenda.xhtml
@@ -16,6 +16,8 @@
 			<ui:include src="/ecommerce/paginas/uteis/barramenu.xhtml" />
 			<br></br>
 			
+			<h1>Olá Mundo</h1>
+			
 			<div class="row">
 				<div class="col-12">
 					<h:dataTable id="table" border="0"
@@ -190,7 +192,7 @@
 						<div class="modal-footer">
 							<button type="button" class="btn btn-primary"
 								data-dismiss="modal">Cancelar</button>
-							<<h:commandButton type="button" class="btn btn-primary" action="#{itemVendaController.chamarRecebimento}">Próximo</h:commandButton>
+							<h:commandButton type="button" class="btn btn-primary" action="#{itemVendaController.chamarRecebimento}">Próximo</h:commandButton>
 						</div>
 					</div>
 				</div>
