--- a/src/main/webapp/ecommerce/paginas/cadastros/cadastrarFormaPagamento.xhtml
+++ b/src/main/webapp/ecommerce/paginas/cadastros/cadastrarFormaPagamento.xhtml
@@ -32,7 +32,7 @@
 				<div class="col-4 offset-2 form-inline">
 					<h:selectBooleanCheckbox
 						value="#{formaPagamentoController.formaPagamentoDto.aparecerCaixa}"
-						class="form-control col-2" required="true" id="lancamentoCaixa"
+						class="form-control col-2" id="lancamentoCaixa"
 						autocomplete="off"></h:selectBooleanCheckbox>
 					<label>Mostrar lançamento caixa</label>
 				</div>
@@ -44,7 +44,7 @@
 				<div class="col-4 offset-2 form-inline">
 					<h:selectBooleanCheckbox
 						value="#{formaPagamentoController.formaPagamentoDto.compensado}"
-						class="form-control col-2" required="true" id="compensado"
+						class="form-control col-2" id="compensado"
 						autocomplete="off"></h:selectBooleanCheckbox>
 					<label>Compensado</label>
 					<h:message for="compensado" showDetail="false" showSummary="true"
