--- a/src/main/webapp/ecommerce/paginas/processos/itensVenda.xhtml
+++ b/src/main/webapp/ecommerce/paginas/processos/itensVenda.xhtml
@@ -15,6 +15,8 @@
 		<div class="container bg-light rounded-bottom divcentral">
 			<ui:include src="/ecommerce/paginas/uteis/barramenu.xhtml" />
 			<br></br>
+			<h1 align="center">Itens da Venda</h1>
+			<br />
 			<div class="row mb-3 ml-5 pl-4">
 				<div class="col-7">
 					<label>Cliente</label>
